fix overflow

--- a/src/shared/styles/_base.scss
+++ b/src/shared/styles/_base.scss
@@ -12,6 +12,7 @@ body {
 
 html {
   scroll-behavior: smooth;
+  overflow: overlay;
 }
 
 h1,
